# nixos-config

./: .gitignore  .sops.yaml  .typos.toml  Makefile  README.md  configuration.nix  core.lua  flake.nix  install.sh  make_makefile.py
code/: rust.nix
hardware-confs/: desktop.nix  framework-13.nix  framework.nix  laptop.nix  nas.nix  rpi.nix  server-0.nix  undefined.nix
home/: core.nix  desktop.nix  framework.nix  laptop.nix  nas.nix  rpi.nix  server-0.nix  undefined.nix
home-manager/: flake.nix  home.nix
home-manager/code/: rust.nix
home/common/: core.nix  desktop.nix  framework-13.nix  framework.nix  laptop.nix  nas.nix  undefined.nix
home/module/: file-output.nix  nvim.nix  rio.nix  systemd.nix
home/optional/preset/: de.nix  git.nix  (+3 more)
home/preset/: cli.nix  de.nix  easyeffects.json  fish.nix  git.nix  helix.nix  java.nix  plasma.nix  qutebrowser.nix  rust.nix  steam.nix
home/tye/: default.nix
home/work/: default.nix
lib/: keys.nix
scripts/: init.sh  install.sh
secrets/: secrets.yaml
system/: configuration.nix  core.nix  de.nix  desktop.nix  exec_deps.nix  framework-13.nix  framework.nix  laptop.nix  nas.nix  rpi.nix  server-0.nix  system-manager.nix  undefined.nix  utils.nix  virtualization.nix
system-manager/: Cargo.toml  README.md  default.nix  flake.nix
system-manager/src/: args.rs  main.rs
system/de/: avatar.nix  de.nix
system/module/: remote-build.nix
system/nas/: atuin.nix  email.nix  unifi.nix  ups.nix  zfs.nix
system/vpn/: client.nix  server.nix
tye/: core.nix  helix.nix  home.nix  plasma.nix  python.nix  rust.nix  steam.nix
(+9 files in other folders)
