[package]
name = "system-manager"
version = "1.2.0"
edition = "2021"
description = "Manages the nixos configuration for the system & home-manager."

[dependencies]
app_dirs2 = "2.5.5"
clap = { version = "4.5.23", features = ["derive"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
thiserror = "2.0.9"
